@@ -1,197 +1,229 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.subethamail</groupId>
-  <artifactId>subethasmtp</artifactId>
-  <version>3.1.7</version>
-  <name>SubEtha SMTP</name>
-  <description>
-    SubEtha SMTP is an easy-to-use server-side SMTP library for Java.
-  </description>
-  <url>http://subethasmtp.googlecode.com</url>
-  <inceptionYear>2006</inceptionYear>
-  <scm>
-    <connection>http://subethasmtp.googlecode.com/svn</connection>
-    <developerConnection>https://subethasmtp.googlecode.com/svn</developerConnection>
-    <url>http://subethasmtp.googlecode.com/svn</url>
-  </scm>
-  <issueManagement>
-    <system>Google</system>
-    <url>http://code.google.com/p/subethasmtp/issues/list</url>
-  </issueManagement>
-  <mailingLists>
-    <mailingList>
-      <name>User and Developer List</name>
-      <subscribe>http://www.subethamail.org/se/list/smtp</subscribe>
-      <unsubscribe>http://www.subethamail.org/se/list/smtp</unsubscribe>
-      <post>smtp@subethamail.org</post>
-      <archive>http://www.subethamail.org/se/archive.jsp?listId=13</archive>
-    </mailingList>
-  </mailingLists>
-  <licenses>
-    <license>
-      <name>Apache 2.0</name>
-      <url>http://code.google.com/p/subethasmtp/source/browse/trunk/LICENSE.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <developers>
-    <developer>
-      <id>latchkey</id>
-      <name>Jon Stevens</name>
-      <roles>
-        <role>Project Owner</role>
-      </roles>
-    </developer>
-    <developer>
-      <id>lhoriman</id>
-      <name>Jeff Schnitzer</name>
-      <roles>
-        <role>Project Owner</role>
-      </roles>
-    </developer>
-    <developer>
-      <id>scotthernandez</id>
-      <name>Scott Hernandez</name>
-      <roles>
-        <role>Project Owner</role>
-      </roles>
-    </developer>
-    <developer>
-      <id>jeffjjensen</id>
-      <name>Jeff Jensen</name>
-      <timezone>-6</timezone>
-      <roles>
-        <role>Committer</role>
-      </roles>
-    </developer>
-    <developer>
-      <id>hontvari.jozsef.levente</id>
-      <name>Hontvári József Levente</name>
-      <timezone>+1</timezone>
-      <roles>
-        <role>Committer</role>
-      </roles>
-    </developer>
-  </developers>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3.1</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>org.subethamail.smtp.Version</mainClass>
-              <packageName>org.subethamail.smtp</packageName>
-            </manifest>
-            <manifestEntries>
-              <Specification-Version>${project.version}</Specification-Version>
-              <Implementation-Version>${maven.build.timestamp}</Implementation-Version>
-              <url>${project.url}</url>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-      <!-- always sign -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>com.googlecode.jmockit</groupId>
-      <artifactId>jmockit</artifactId>
-      <version>0.999.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.5</version>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-      <version>1.4.4</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>javax.activation</groupId>
-      <artifactId>activation</artifactId>
-      <version>1.1.1</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.6.1</version>
-      <type>jar</type>
-      <scope>test</scope>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>1.3.9</version>
-      <type>jar</type>
-    </dependency>
-  </dependencies>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Nexus Release Repository</name>
-      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-    </repository>
-  </distributionManagement>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.build.timestamp.format>MMMM dd yyyy</maven.build.timestamp.format>
-  </properties>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>org.subethamail</groupId>
+    <artifactId>subethasmtp-arben</artifactId>
+    <version>4.0.0</version>
+
+    <name>SubEtha SMTP - Arben</name>
+    <description>
+        Arben is a fork of SubEtha SMTP dedicated to jdk 21+. SubEtha SMTP is an easy-to-use server-side SMTP library for Java.
+    </description>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.build.timestamp.format>MMMM dd yyyy</maven.build.timestamp.format>
+    </properties>
+
+
+    <url>https://github.com/donniexyz/subethasmtp-jdk21</url>
+    <inceptionYear>2006</inceptionYear>
+    <scm>
+        <connection>https://github.com/donniexyz/subethasmtp-jdk21</connection>
+        <developerConnection>https://github.com/donniexyz/subethasmtp-jdk21</developerConnection>
+        <url>https://github.com/donniexyz/subethasmtp-jdk21</url>
+    </scm>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/donniexyz/subethasmtp-jdk21</url>
+    </issueManagement>
+    <mailingLists>
+        <mailingList>
+            <name>User and Developer List</name>
+            <subscribe>http://www.subethamail.org/se/list/smtp</subscribe>
+            <unsubscribe>http://www.subethamail.org/se/list/smtp</unsubscribe>
+            <post>smtp@subethamail.org</post>
+            <archive>http://www.subethamail.org/se/archive.jsp?listId=13</archive>
+        </mailingList>
+    </mailingLists>
+    <licenses>
+        <license>
+            <name>Apache 2.0</name>
+            <url>http://code.google.com/p/subethasmtp/source/browse/trunk/LICENSE.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>latchkey</id>
+            <name>Jon Stevens</name>
+            <roles>
+                <role>Project Owner</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>lhoriman</id>
+            <name>Jeff Schnitzer</name>
+            <roles>
+                <role>Project Owner</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>scotthernandez</id>
+            <name>Scott Hernandez</name>
+            <roles>
+                <role>Project Owner</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>jeffjjensen</id>
+            <name>Jeff Jensen</name>
+            <timezone>-6</timezone>
+            <roles>
+                <role>Committer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>hontvari.jozsef.levente</id>
+            <name>Hontvári József Levente</name>
+            <timezone>+1</timezone>
+            <roles>
+                <role>Committer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>donniexyz</id>
+            <name>Dony Zulkarnaen</name>
+            <organization>subethasmtp-arben</organization>
+            <roles>
+                <role>Project Owner</role>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>smtp</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.13</version>
+        </dependency>
+
+        <!-- dev -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+
+        <!-- test -->
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.49</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.13</version>
+            <scope>test</scope>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.5.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.subethamail.smtp.Version</mainClass>
+                            <packageName>org.subethamail.smtp</packageName>
+                        </manifest>
+                        <manifestEntries>
+                            <Specification-Version>${project.version}</Specification-Version>
+                            <Implementation-Version>${maven.build.timestamp}</Implementation-Version>
+                            <url>${project.url}</url>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <!-- always sign -->
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
